--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 		<div id="info" class="info-container full-height hidden">
 			<div class="info">
 				<div class="title"></div>
-				<a class="uploader"></a>
+				<a class="uploader" target="_blank"></a>
 				<div class="views">
 					<span class="views-value"></span>
 					<span>views</span>
