--- a/app/static/style.css
+++ b/app/static/style.css
@@ -890,8 +890,7 @@ table {
 			max-height: max(65vh, calc(10 *
 						(((var(--thumb-width) / 16) * 9) + var(--item-gap)) +
 						2 * (var(--border-offset) +
-							 var(--border-width)) +
-						var(--item-gap)));
+							 var(--border-width))));
 		}
 			
 			.videos::before {
